<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/RegHeaderXML"
        android:textStyle="bold"
        android:textSize="30sp"
        android:id="@+id/text"
        android:layout_marginTop="30dp"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height= "48dp"
        android:id="@+id/email"
        android:layout_marginTop="30dp"
        android:hint="@string/RegEmailHint"
        android:layout_below="@+id/text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/pwd"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/email"
        android:hint="@string/RegPassHint"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pwd"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="120dp"
        android:text="@string/RegXMLBtnReg" />

    <Button
        android:id="@+id/btn_login1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_register"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:text="@string/RegXMLBtnLog" />

    <Button
        android:id="@+id/DialogFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="292dp"
        android:text="@string/NeedHelpBtn"
        android:onClick="showDialog"/>

</RelativeLayout>
