<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/LogHeaderXML"
        android:textStyle="bold"
        android:textSize="30sp"
        android:id="@+id/log_text"
        android:layout_marginTop="30dp"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height= "48dp"
        android:id="@+id/log_email"
        android:layout_marginTop="30dp"
        android:hint="@string/RegEmailHint"
        android:layout_below="@+id/log_text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/log_pwd"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/log_email"
        android:hint="@string/RegPassHint"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/log_pwd"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="115dp"
        android:text="@string/LogXMLBtnLog" />

    <Button
        android:id="@+id/DialogFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="120dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="292dp"
        android:text="@string/NeedHelpBtn"
        android:onClick="showDialog"/>

</RelativeLayout>
